--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="background">#FFFFFF</color>
+    <color name="on_background">#F4F4F6</color>
+    <color name="text_color_primary">#000000</color>
+    <color name="icon_tint_color">#66666E</color>
 </resources>
